--- a/package.json
+++ b/package.json
@@ -29,9 +29,7 @@
     "reflect-metadata": "0.1.9",
     "rxjs": "5.1.0",
     "ts-helpers": "1.1.2",
-    "zone.js": "0.8.4"
-  },
-  "devDependencies": {
+    "zone.js": "0.8.4",
     "@angular/compiler-cli": "4.0.0",
     "@types/jasmine": "2.5.38",
     "@types/node": "7.0.5",
