--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
     "@angular/cli": "1.2.7",
     "@angular/common": "4.0.0",
     "@angular/compiler": "4.0.0",
+    "@angular/compiler-cli": "4.0.0",
     "@angular/core": "4.0.0",
     "@angular/forms": "4.0.0",
     "@angular/http": "4.0.0",
     "@angular/platform-browser": "4.0.0",
     "@angular/platform-browser-dynamic": "4.0.0",
     "@angular/router": "4.0.0",
+    "@types/jasmine": "2.5.38",
+    "@types/node": "7.0.5",
     "admin-lte": "2.3.11",
+    "codelyzer": "2.0.0",
     "core-js": "2.4.1",
     "express": "^4.17.1",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
-    "jquery": "3.1.1",
-    "json-server": "^0.14.0",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.1.0",
-    "ts-helpers": "1.1.2",
-    "zone.js": "0.8.4",
-    "@angular/compiler-cli": "4.0.0",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "7.0.5",
-    "codelyzer": "2.0.0",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "3.2.0",
+    "jquery": "3.1.1",
+    "json-server": "^0.14.0",
     "karma": "1.4.1",
     "karma-chrome-launcher": "2.0.0",
     "karma-cli": "1.0.1",
     "karma-jasmine": "1.1.0",
     "karma-remap-istanbul": "0.2.2",
     "protractor": "5.1.0",
+    "reflect-metadata": "0.1.9",
+    "rxjs": "5.1.0",
+    "ts-helpers": "1.1.2",
     "ts-node": "2.1.0",
     "tslint": "4.5.0",
     "typescript": "2.2.0",
-    "webdriver-manager": "10.2.5"
+    "webdriver-manager": "10.2.5",
+    "zone.js": "0.8.4"
   },
   "engines": {
     "node": "10.15.0",
